fixed bugs on smaller displays:

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -21,3 +21,9 @@
   left: 0;
   top: 0;
 }
+
+@media screen and (max-width: 1000px) {
+  .logoleft {
+    display: none;
+  }
+}
